--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="livros.html">Livros</a>
+                <a class="nav-link" href="livros.html">Portifólio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="autores.html">Autores</a>
+                <a class="nav-link" href="autores.html">Contatos</a>
               </li>
             </ul>
-            <input type="checkbox" id="tema" />
+          <!--  <input type="checkbox" id="tema" />
             <i
               id="icone-tema"
               class="fa-solid fa-6x fa-sun"
               style="color: #fff"
             ></i>
-      
+          -->
           </div>
         </div>
       </nav>
-<h1>sexo </h1>
+<h1 class="text-center">Bem-Vindos à Cactwo!</h1>
 <script src="bootstrap/js/bootstrap.bundle.min.js"> </script>
 <script src="bootstrap/js/popper.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"> </script>
