--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+<link rel="icon" type="image/png" sizes="32x32" href="img/icone.png">
   <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
@@ -50,8 +51,6 @@
         </div>
       </nav>
 <h1 class="text-center">Bem-Vindos à Cactwo!</h1>
-<script src="bootstrap/js/bootstrap.bundle.min.js"> </script>
-<script src="bootstrap/js/popper.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"> </script>
 </body>
 </html>
