--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <ul
               class="navbar-nav ml-3"
             >
-
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="index.html"
                   >Home</a
@@ -50,7 +49,7 @@
   <div class="row">
     <div class="col-md">
 <img src="img/aaa.jpeg" id="fotinha" width="70%">     
-<img src="img/logue.png" width="70%">     
+<img src="img/logue.png" id="logue" width="70%">     
     </div>
     <div class="col-md text-center">
 <br>
