--- a/index.html
+++ b/index.html
@@ -196,7 +196,6 @@
                         <h6 class="card-title">
                           Restaurante Vegano - Melhor carne de vaca vegana
                         </h6>
-                        <p class="card-text">Feito com amor</p>
                       </div>
                     </a>
                   </div>
@@ -217,7 +216,6 @@
                         <h6 class="card-title">
                           Restaurante Vegano - Melhor carne de vaca vegana
                         </h6>
-                        <p class="card-text">Feito com amor</p>
                       </div>
                     </a>
                   </div>
@@ -238,7 +236,6 @@
                         <h6 class="card-title">
                           Restaurante Vegano - Melhor carne de vaca vegana
                         </h6>
-                        <p class="card-text">Feito com amor</p>
                       </div>
                     </a>
                   </div>
@@ -259,7 +256,6 @@
                         <h6 class="card-title">
                           Restaurante Vegano - Melhor carne de vaca vegana
                         </h6>
-                        <p class="card-text">Feito com amor</p>
                       </div>
                     </a>
                   </div>
@@ -307,20 +303,34 @@
           </script>
         </div>
       </div>
-<div id="fundoCacto" id="contato">
-        <div class="container text-center text-light">
-         <br>         <br>
+      <!-- <div id="fundoCacto" id="contato" class="bg-responsive"> -->
 
-
-            <h1> Se interessou? </h1>
-            <h5> Faça sua gravação conosco agora!</h5>
-            <br>
-            <br>
-
+    
+  <div class="container text-center text-light">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src="img/cacto-esquerda.png" alt="">
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="text-center">
+          <h1 class="mb-3">Se interessou?</h1>
+          <h5>Faça sua gravação conosco agora!</h5>
         </div>
       </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src="img/cacto-direita.png" alt="">
+      </div>
+    </div>
+  </div>
       <div class="container text-center text-light mt-5">
          <h1> Nos envie uma mensagem!</h1>
+         <label for="metodo">Como deseja nos enviar mensagem?</label>
+         <div class="d-flex justify-content-center">
+          <select class="form-control w-50 text-center mb-4" id="metodo">
+            <option>Whatsapp</option>
+            <option>Email</option>
+          </select>
+        </div>  
          <form>
             <div class="row">
                <div class="col-md-6">
