--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       <div class="col-lg-4 col-md-6 mb-4">
         <img src="img/cacto-esquerda.png" alt="">
       </div>
-      <div class="col-lg-4 col-md-6 mb-4">
+      <div class="col-lg-4 col-md-6 mb-4 titulo">
         <div class="text-center">
           <h1 class="mb-3">Se interessou?</h1>
           <h5>Faça sua gravação conosco agora!</h5>
