--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   Como posso entrar em contato?
                 </h3>
                 <p>
-                  por meio dessas bostas<br />
+                  por meio dessas redes sociais<br />
                   <a
                     href="https://www.linkedin.com/in/cactwo-audiovisual-12404b267"
                     target="_blank"
